Fix top padding on smallest resolution, iOS phone number display

--- a/src/styles/3-layouts/_header.sass
+++ b/src/styles/3-layouts/_header.sass
@@ -1,6 +1,7 @@
 header
   width: 100%
   margin: 0px
+  padding-top: 8px
   box-sizing: border-box
   background-color: $dark_black
 
