--- a/src/styles/4-modules/_contact-info.sass
+++ b/src/styles/4-modules/_contact-info.sass
@@ -10,7 +10,7 @@
       font-family: $font_stack_light
       margin: 0px auto
 
-  .email-address
-    font-family: $font_stack_bold
-    color: $atlas_green
-    margin-top: 0px
+    a.email-address
+      font-family: $font_stack_bold
+      color: $atlas_green
+      margin-top: 0px
